--- a/mapping/tennessee-fires/style.css
+++ b/mapping/tennessee-fires/style.css
@@ -34,7 +34,7 @@ p {
     margin-bottom: 0.3em;
     color: rgb(0, 0, 0);
 }
-.mapboxgl.Popup p {
+.mapboxgl.Popup h4 p {
     font-weight: 300;
     margin-top: 0.3em;
     margin-bottom: 0em;
