--- a/mapping/tennessee-fires/style.css
+++ b/mapping/tennessee-fires/style.css
@@ -16,10 +16,18 @@ h1 {
     width: 60%;
     height: 620px;
     margin: 1em auto;
+    margin-left: 70px;
 }
 
 #map-second {
     width: 60%;
     height: 620px;
     margin: 1em auto;
+    margin-right: 70px;
+}
+
+.maps-container {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
 }
