--- a/thesis/stylesheet.css
+++ b/thesis/stylesheet.css
@@ -1,15 +1,39 @@
+body {
+    padding: 0px;
+}
+
 .center-text {
     text-align: center;
 }
 
 .hero-image {
-    width: 113vw;
+    min-width: 100vw;
+    height: 100vh;
+    /* max-height: 100vh; */
+    object-fit: cover;
+    object-position: center bottom;
+    /* opacity: 0.8; */
+    /* box-shadow: inset 0 0 200px black; */
+}
+.hero-image::after{
+    content: "";
+    display: block;
+    width: 100%;
+    height: 100%;
+    background: radial-gradient(ellipse at center, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 70%,rgba(255,255,255,1) 100%);
+    border-radius: 50%;
+    position: absolute;
+    bottom: 0; left: 0;
+}
+
+.map-image {
+    width: 70vw;
     height: auto;
-    max-height: 130vh;
-    margin-right: -280px;
-    margin-left: -200px;
-    margin-top: -80px;
-    margin-bottom: 10px;
+    max-height: 80vh;
+    /* margin-right: -280px; */
+    margin-left: 200px;
+    /* margin-top: -80px; */
+    /* margin-bottom: 10px; */
     object-fit: cover;
     object-position: center bottom;
     opacity: 0.9;
@@ -17,9 +41,9 @@
 
 .text-on-image {
     position: absolute;
-    color: rgb(164, 223, 252);
-    font-size: 80px;
-    top: 480px;
+    color: rgb(242, 235, 209);
+    font-size: 70px;
+    top: 400px;
     left: 60px;
-    text-shadow: 6px 6px black;
+    /* text-shadow: 6px 6px rgb(255, 253, 253); */
 }
