--- a/thesis/stylesheet.css
+++ b/thesis/stylesheet.css
@@ -1,5 +1,6 @@
 body {
     padding: 0px;
+    background-color:  rgb(250, 248, 241);
 }
 
 .center-text {
@@ -15,15 +16,17 @@ body {
     /* opacity: 0.8; */
     /* box-shadow: inset 0 0 200px black; */
 }
-.hero-image::after{
+
+.hero-image::after {
     content: "";
     display: block;
     width: 100%;
     height: 100%;
-    background: radial-gradient(ellipse at center, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 70%,rgba(255,255,255,1) 100%);
+    background: radial-gradient(ellipse at center, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 70%, rgba(255, 255, 255, 1) 100%);
     border-radius: 50%;
     position: absolute;
-    bottom: 0; left: 0;
+    bottom: 0;
+    left: 0;
 }
 
 .map-image {
@@ -42,8 +45,21 @@ body {
 .text-on-image {
     position: absolute;
     color: rgb(242, 235, 209);
-    font-size: 70px;
-    top: 400px;
+    font-size: 90px;
+    top: 200px;
     left: 60px;
+    word-wrap: break-word;
     /* text-shadow: 6px 6px rgb(255, 253, 253); */
+}
+
+#heatmap {
+    position: relative;
+}
+
+.tooltip {
+    position: absolute;
+    z-index: 1070;
+    display: block;
+    word-wrap: break-word;
+    opacity: 0;
 }
