--- a/thesis/stylesheet.css
+++ b/thesis/stylesheet.css
@@ -3,6 +3,11 @@ body {
     background-color:  rgb(250, 248, 241);
 }
 
+h3 {
+    font-size: 24px;
+    font-weight: 900;
+}
+
 .center-text {
     text-align: center;
 }
@@ -10,11 +15,8 @@ body {
 .hero-image {
     min-width: 100vw;
     height: 100vh;
-    /* max-height: 100vh; */
     object-fit: cover;
     object-position: center bottom;
-    /* opacity: 0.8; */
-    /* box-shadow: inset 0 0 200px black; */
 }
 
 .hero-image::after {
@@ -33,10 +35,7 @@ body {
     width: 70vw;
     height: auto;
     max-height: 80vh;
-    /* margin-right: -280px; */
     margin-left: 200px;
-    /* margin-top: -80px; */
-    /* margin-bottom: 10px; */
     object-fit: cover;
     object-position: center bottom;
     opacity: 0.9;
