--- a/thesis/stylesheet.css
+++ b/thesis/stylesheet.css
@@ -54,8 +54,7 @@ h3 {
 
 #heatmap {
     position: relative;
-    /* width: 58%; */
-    /* margin: 5rem auto; */
+    margin: 5rem auto;
 }
 
 .tooltip {
