--- a/nyc-flooding/stylesheet.css
+++ b/nyc-flooding/stylesheet.css
@@ -70,3 +70,30 @@ h3 {
     width: 100%;
     height: auto;
 }
+
+#maptext {
+    width: 39%;
+    height: 650px;
+    margin-right: 80px;
+}
+
+#map-container {
+    display: flex;
+    justify-content: center;
+    gap: 45px;
+}
+
+.title {
+    background-color: rgb(253, 241, 175);
+    opacity: 70%;
+    border-radius: 1em;
+    top: 5em;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+    font: .8em/.9em 'Open Sans', sans-serif;
+    line-height: 2em;
+    padding: 5px 10px 5px 10px;
+    position: absolute;
+    max-width: 24%;
+    margin: 0em 2em;
+    z-index: 100;
+}
