--- a/style.css
+++ b/style.css
@@ -1,3 +1,20 @@
+@media (max-width:400px) {
+  h2 {
+  font-size: 20px;
+  line-height: 90px;
+  }
+
+  p{
+    font-size: 10px;
+  }
+
+  .topper{
+    word-wrap: break-word;
+    display: table-cell;
+  }
+}
+
+
 body {
   margin-left: 60px;
   margin-right: 80px;
@@ -10,22 +27,6 @@ body {
   margin-right: 200px;
 }
 
-@media (max-width:400px) {
-  h2 {
-  font-size: 20px;
-  line-height: 90px;
-  }
-
-  body {
-    margin-left: 10px;
-    margin-right: 10px;
-  }
-
-  .topper{
-    word-wrap: break-word;
-    display: table-cell;
-  }
-}
 
 h1 {
   font-family: 'Eczar', serif;
